--- a/medicare/core_app/templates/registration/base_auth.html
+++ b/medicare/core_app/templates/registration/base_auth.html
@@ -1,16 +1,42 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block title %}Registration {% endblock title %}</title>
-  <link rel="stylesheet" href="{% static 'css\authentication\style.css' %}">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>{% block tittle %} Medicare Registration {% endblock %}</title>
+  <!-- base:css -->
+  <link rel="stylesheet" href="{% static 'vendors/mdi/css/materialdesignicons.min.css' %}">
+  <link rel="stylesheet" href="{% static 'vendors/css/vendor.bundle.base.css' %}">
+ 
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <!-- endinject -->
+  <link rel="shortcut icon" href="{% static 'images/favicon.png' %}" />
 </head>
+
 <body>
-  <div class="container">
-   {% block content %}
-   {% endblock content %}
+  <div class="container-scroller d-flex">
+    {% block content %}
+    {% endblock content %}
+
+    <!-- page-body-wrapper ends -->
   </div>
+  <!-- container-scroller -->
+  <!-- base:js -->
+  <script src="{% static 'vendors/js/vendor.bundle.base.js' %}"></script>
+
+  <!-- endinject -->
+  <script src="{% static 'js/jquery.cookie.js' %}" type="text/javascript"></script>
+
+  <!-- inject:js -->
+
+  <script src="{% static 'js/off-canvas.js' %}"></script>
+  <script src="{% static 'js/hoverable-collapse.js' %}"></script>
+  <script src="{% static 'js/template.js' %}"></script>
+
+  <!-- endinject -->
 </body>
+
 </html>
