--- a/medicare/core_app/templates/registration/login.html
+++ b/medicare/core_app/templates/registration/login.html
@@ -3,20 +3,55 @@
 {% block title %}Registration-Login {% endblock title %}
 
 {% block content %}
-<div class="title">Login</div>
-<div class="content">
-  <!-- Registration form -->
-  <form method="post">
-    {% csrf_token %}
-    {{ form.non_field_errors }}
-    {% for field in form %}
-        {{ field.errors }}
-        {{ field.label_tag }} {{ field }}
-    {% endfor %}
-    <button type="submit">Login</button>
-</form>
-  <p>Don't have an account?<a href="{% url 'core_app:signup' %}">Register</a></p>
+<div class="container-fluid page-body-wrapper full-page-wrapper d-flex">
+  <div class="content-wrapper d-flex align-items-center auth px-0">
+    <div class="row w-100 mx-0">
+      <div class="col-lg-4 mx-auto">
+        <div class="auth-form-light text-left py-5 px-4 px-sm-5">
+          <h4>Hello! let's get started</h4>
+          <h6 class="font-weight-light">Sign in to continue.</h6>
 
+          <form class="pt-3" method="post" action="{% url 'login' %}">
+
+            {% csrf_token %}
+
+            {% if form.errors %}
+            <p style="color: red;">Your username and password didn't match. Please try again.</p>
+            {% endif %}
+  
+
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email</label>
+              <input type="email" name="username" class="form-control form-control-lg" id="email" placeholder="Enter your email" required>
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password"  name="password" class="form-control form-control-lg" id="password" placeholder="Password" required>
+            </div>
+            <div class="mt-3">
+              <button class="btn btn-block btn-primary btn-lg font-weight-medium" type="submit">LOGIN</button>
+            </div>
+            <div class="my-2 d-flex justify-content-between align-items-center">
+              <div class="form-check">
+                <label class="form-check-label text-muted">
+                  <input type="checkbox" class="form-check-input">
+                  Keep me signed in
+                </label>
+              </div>
+              <a href="{% url 'password_reset' %}" class="auth-link text-black">Forgot password?</a>
+            </div>
+
+            <div class="text-center mt-4 font-weight-light">
+              Don't have an account? <a href="{% url 'core_app:signup' %}" class="text-primary">Create</a>
+            </div>
+          </form>
+
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- content-wrapper ends -->
 </div>
 {% endblock content %}
 
