--- a/medicare/core_app/templates/registration/patient_signup.html
+++ b/medicare/core_app/templates/registration/patient_signup.html
@@ -1,20 +1,85 @@
 {% extends "registration\base_auth.html" %}
 {% load static %}
-{% block title %}Registration-Login {% endblock title %}
+{% block title %}Registration-Patient {% endblock title %}
 
 {% block content %}
-<div class="title"> Patient Registration</div>
-<div class="content">
-  <!-- Registration form -->
-  <form method="post">
-    {% csrf_token %}
-    {{ form.non_field_errors }}
-    {% for field in form %}
-        {{ field.errors }}
-        {{ field.label_tag }} {{ field }}
-    {% endfor %}
-    <button type="submit">Register</button>
-</form>
-  <p>Already have an account?<a href="{% url 'login' %}" >Log in</a></p>
+<div class="container-fluid page-body-wrapper full-page-wrapper d-flex">
+  <div class="content-wrapper d-flex align-items-center auth px-0">
+    <div class="row w-100 mx-0">
+      <div class="col-lg-4 mx-auto">
+        <div class="auth-form-light text-left py-5 px-4 px-sm-5">
+          <h4>Hello! let's get started</h4>
+          <h6 class="font-weight-light">Register to continue.</h6>
 
+
+          <form class="pt-3" method="post" action="{% url 'core_app:patient_signup' %}">
+            {% csrf_token %}
+
+            {% if form.non_field_errors %}
+            <div class="alert alert-danger">
+              {% for error in form.non_field_errors %}
+                {{ error }}
+              {% endfor %}
+            </div>
+          {% endif %}
+            
+            <div class="form-group">
+              <label for="first_name">First Name</label>
+              <input type="text" name="first_name" class="form-control form-control-lg" id="first_name" placeholder="First name" required>
+            </div>  
+            
+            <div class="form-group">
+              <label for="last_name">Last Name</label>
+              <input type="text" name="last_name" class="form-control form-control-lg" id="last_name" placeholder="Last name" required>
+            </div>
+            
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" name="email" class="form-control form-control-lg" id="email" placeholder="Enter your email" required>
+            </div>
+            
+            <div class="form-group">
+              <label for="phone_number">Phone Number</label>
+              <input type="tel" name="phone_number" class="form-control form-control-lg" id="phone_number" placeholder="Enter your phone number">
+            </div>
+            
+            <div class="form-group">
+              <label for="password1">Password</label>
+              <input type="password" name="password1" class="form-control form-control-lg" id="password1" 
+                     placeholder="Enter password" pattern=".{8,}" title="Password must be at least 8 characters" required>
+            </div>
+            
+            <div class="form-group">
+              <label for="password2">Confirm Password</label>
+              <input type="password" name="password2" class="form-control form-control-lg" id="password2" 
+                     placeholder="Confirm password" required>
+            </div>
+            
+            <div class="mt-3">
+              <button class="btn btn-block btn-primary btn-lg font-weight-medium" type="submit">Register</button>
+            </div>
+            
+            <div class="my-2 d-flex justify-content-between align-items-center">
+              <div class="form-check">
+                <label class="form-check-label text-muted">
+                  <input type="checkbox" class="form-check-input" name="remember_me">
+                  Keep me signed in
+                </label>
+              </div>
+            </div>
+          
+            <div class="text-center mt-4 font-weight-light">
+              Already have an account? <a href="{% url 'login' %}" class="text-primary">Login</a>
+            </div>
+          </form>
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- content-wrapper ends -->
+</div>
 {% endblock content %}
+
+
+   
